# NewsAgentDemo_OpencodeImpl

./: .gitignore  AGENTS.md  README.md  WORKFLOW.md  extract_image_urls.py  main.py  news_aggregation.json  opencode.json  pyproject.toml  sports_news_collection.json  temp_assemble_report.py  test_database.py  test_storage_tools.py
.claude/: settings.local.json
data/: test_news.db
docs/: AGENT-TASK-ALLOCATION.md  ARCHITECTURE_V2_DESIGN.md  Agent配置优化建议.md  EVENT-LEVEL-QUERIES.md  MCP_TROUBLESHOOTING.md  NEWS-PROCESSOR-INTEGRATION.md  OPCODE-CONFIG-CHECK.md  REPORT-GENERATION-CONFIG.md  agents.md  call-flow-verification-complete.md  call-parameters-verification.md  cleanup-summary.md  database-optimization-plan.md  database-optimization-summary.md  directory-structure-design.md  image_saving_issue.md  mcp-tools-configuration.md  news_storage_usage.md  opencode-config-summary.md  source-citation-issue-analysis.md  templates-complete-summary.md  tool-naming-fix.md  事件级并发优化设计.md  图片保存优化说明.md  新闻搜索优化-完整版.md  新闻搜索优化说明.md  智能体快速参考.md  智能体架构优化说明.md  智能体架构总结.md  智能搜索设计说明.md
prompts/: category-handler.md  category-indexer.md  category-processor.txt  coordinator.md  event-aggregator.txt  event-analyzer.md  event-predictor.md  event-processor.txt  event-report-generator.txt  event-timeline.md  event-validator.md  global-agent-rules.md  images-builder.md  images-report-generator.md  news-aggregator.md  news-builder.md  news-collector.md  news-collector.txt  news-coordinator.txt  news-processor.md  news-report-generator.md  prediction-report-generator.md  predictor-builder.md  (+13 more)
(+127 files in other folders)
